--- a/base/pom.xml
+++ b/base/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
