--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <lombok.version>1.18.12</lombok.version>
         <guava.version>28.2-jre</guava.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <aspectj.version>1.8.13</aspectj.version>
     </properties>
 
 
@@ -122,6 +123,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
 
         </dependencies>
