--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.laynefong.hodgepodge</groupId>
+                <artifactId>multilanguage</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot.version}</version>
@@ -153,6 +159,7 @@
         <module>forkjoin</module>
         <module>disruptor</module>
         <module>annotation</module>
+        <module>multilanguage</module>
     </modules>
 
 </project>
