--- a/base/pom.xml
+++ b/base/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>guava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
