--- a/base/pom.xml
+++ b/base/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>poi</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+        </dependency>
+
 
     </dependencies>
 
