--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
                 <version>${poi.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>1.10.3</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
