--- a/base/pom.xml
+++ b/base/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>jsoup</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+
 
     </dependencies>
 
