--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <aspectj.version>1.9.4</aspectj.version>
         <poi.version>4.1.0</poi.version>
+        <data-core-version>1.13.8.RELEASE</data-core-version>
     </properties>
 
 
@@ -148,6 +149,12 @@
                 <groupId>org.jsoup</groupId>
                 <artifactId>jsoup</artifactId>
                 <version>1.10.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-commons</artifactId>
+                <version>${data-core-version}</version>
             </dependency>
 
         </dependencies>
